RESOLVED FIXED181960
WebViews created via -initSimpleHTMLDocumentWithStyle: don't propagate attachmentElementEnabled state
https://bugs.webkit.org/show_bug.cgi?id=181960
Summary WebViews created via -initSimpleHTMLDocumentWithStyle: don't propagate attach...
Wenson Hsieh
Reported 2018-01-22 16:25:49 PST
This breaks the ability to drop multiple attachment elements into Mail, and also breaks attachment progress rendering in Mail.
Attachments
Patch (2.13 KB, patch)
2018-01-22 16:31 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-01-22 16:31:46 PST
Wenson Hsieh
Comment 2 2018-01-22 16:32:21 PST
Wenson Hsieh
Comment 3 2018-01-22 16:45:34 PST
Comment on attachment 331975 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 4 2018-01-22 17:09:50 PST
Comment on attachment 331975 [details] Patch Clearing flags on attachment: 331975 Committed r227371: <https://trac.webkit.org/changeset/227371>
WebKit Commit Bot
Comment 5 2018-01-22 17:09:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.